@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.8
 
 	- Documentation updates (STR #2785)
+	- The RSS notifier did not quote the feed URL in the RSS
+	  file it created (STR #2801)
 	- Increased the default MaxCopies value on Mac OS X to
 	  9999 to match the limit imposed by the print dialog.
 	- The scheduler did not reject requests with an empty
